--- a/gui/wersja2.glade
+++ b/gui/wersja2.glade
@@ -32,17 +32,6 @@
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
-              <object class="GtkImage" id="plot_time_menu">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="pixbuf">plot.png</property>
-              </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">0</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
@@ -118,6 +107,17 @@
               <packing>
                 <property name="left-attach">1</property>
                 <property name="top-attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkImage" id="plot_time_menu">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="pixbuf">1668898.jpg</property>
+              </object>
+              <packing>
+                <property name="left-attach">1</property>
+                <property name="top-attach">0</property>
               </packing>
             </child>
             <child>
@@ -300,7 +300,7 @@ nagrania</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="margin-bottom">20</property>
-            <property name="pixbuf">plot.png</property>
+            <property name="pixbuf">1668898.jpg</property>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -413,7 +413,7 @@ nagrania</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="margin-bottom">25</property>
-                <property name="pixbuf">plot.png</property>
+                <property name="pixbuf">1668898.jpg</property>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -456,6 +456,7 @@ częstotliwością</property>
                 <property name="margin-bottom">25</property>
                 <property name="adjustment">adjustment6</property>
                 <property name="round-digits">1</property>
+                <property name="has-origin">False</property>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -658,7 +659,7 @@ częstotliwością</property>
           <object class="GtkImage" id="filtr_plot">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="pixbuf">plot.png</property>
+            <property name="pixbuf">1668898.jpg</property>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -770,7 +771,7 @@ częstotliwością</property>
           <object class="GtkImage" id="smooth_plot">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="pixbuf">plot.png</property>
+            <property name="pixbuf">1668898.jpg</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -833,7 +834,7 @@ częstotliwością</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="accept_smoot">
+              <object class="GtkButton" id="smooth_back_to_menu">
                 <property name="label" translatable="yes">zaakceptuj i wróć</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
@@ -904,7 +905,7 @@ częstotliwością</property>
             <property name="margin-end">10</property>
             <property name="margin-top">10</property>
             <property name="margin-bottom">10</property>
-            <property name="pixbuf">plot.png</property>
+            <property name="pixbuf">1668898.jpg</property>
           </object>
           <packing>
             <property name="expand">True</property>
