--- a/wersja2.glade
+++ b/wersja2.glade
@@ -113,7 +113,7 @@
               <object class="GtkImage" id="plot_time_menu">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="pixbuf">1668898.jpg</property>
+                <property name="pixbuf">gui\1668898.jpg</property>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -300,7 +300,7 @@ nagrania</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="margin-bottom">20</property>
-            <property name="pixbuf">1668898.jpg</property>
+            <property name="pixbuf">gui\1668898.jpg</property>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -413,7 +413,7 @@ nagrania</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="margin-bottom">25</property>
-                <property name="pixbuf">1668898.jpg</property>
+                <property name="pixbuf">gui\1668898.jpg</property>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -659,7 +659,7 @@ częstotliwością</property>
           <object class="GtkImage" id="filtr_plot">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="pixbuf">1668898.jpg</property>
+            <property name="pixbuf">gui\1668898.jpg</property>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -771,7 +771,7 @@ częstotliwością</property>
           <object class="GtkImage" id="smooth_plot">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="pixbuf">1668898.jpg</property>
+            <property name="pixbuf">gui\1668898.jpg</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -905,7 +905,7 @@ częstotliwością</property>
             <property name="margin-end">10</property>
             <property name="margin-top">10</property>
             <property name="margin-bottom">10</property>
-            <property name="pixbuf">1668898.jpg</property>
+            <property name="pixbuf">gui\1668898.jpg</property>
           </object>
           <packing>
             <property name="expand">True</property>
